<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/sex" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="10dp"
                android:textSize="16sp"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:text="@string/male"/>

                <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:text="@string/female"/>
            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/arrems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:layout_marginHorizontal="15dp"
                android:textSize="16sp"
                android:text="@string/arrems"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/nochron"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:layout_marginHorizontal="15dp"
                android:textSize="16sp"
                android:text="@string/nochron"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/temp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pulse">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/respr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/respr">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sbp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sbp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dbp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dbp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/popct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/popct">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/containedButton"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>