<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            Maybe use a listview instead?-->

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nowserving"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:id="@+id/patientname"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:id="@+id/designation"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/viewinfo" />

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/nextpatient"
                            android:text="@string/nextpatient" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

<!--            <com.google.android.material.card.MaterialCardView-->
<!--                android:id="@+id/card2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="vertical"-->
<!--                        android:padding="16dp">-->

<!--                        &lt;!&ndash; Title, secondary and supporting text &ndash;&gt;-->
<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="Patient 3"-->
<!--                            android:textAppearance="?attr/textAppearanceHeadline6" />-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginTop="8dp"-->
<!--                            android:text="Critical care unit"-->
<!--                            android:textAppearance="?attr/textAppearanceBody2"-->
<!--                            android:textColor="?android:attr/textColorSecondary" />-->

<!--                    </LinearLayout>-->

<!--                    &lt;!&ndash; Buttons &ndash;&gt;-->
<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_margin="8dp"-->
<!--                        android:orientation="horizontal">-->

<!--                        <com.google.android.material.button.MaterialButton-->
<!--                            style="?attr/borderlessButtonStyle"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginEnd="8dp"-->
<!--                            android:text="@string/viewinfo" />-->

<!--                        <com.google.android.material.button.MaterialButton-->
<!--                            style="?attr/borderlessButtonStyle"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/edit" />-->
<!--                    </LinearLayout>-->

<!--                </LinearLayout>-->

<!--            </com.google.android.material.card.MaterialCardView>-->

<!--            <com.google.android.material.card.MaterialCardView-->
<!--                android:id="@+id/card3"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="vertical"-->
<!--                        android:padding="16dp">-->

<!--                        &lt;!&ndash; Title, secondary and supporting text &ndash;&gt;-->
<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="Patient 2"-->
<!--                            android:textAppearance="?attr/textAppearanceHeadline6" />-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginTop="8dp"-->
<!--                            android:text="Other hospitalization"-->
<!--                            android:textAppearance="?attr/textAppearanceBody2"-->
<!--                            android:textColor="?android:attr/textColorSecondary" />-->

<!--                    </LinearLayout>-->

<!--                    &lt;!&ndash; Buttons &ndash;&gt;-->
<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_margin="8dp"-->
<!--                        android:orientation="horizontal">-->

<!--                        <com.google.android.material.button.MaterialButton-->
<!--                            style="?attr/borderlessButtonStyle"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginEnd="8dp"-->
<!--                            android:text="@string/viewinfo" />-->

<!--                        <com.google.android.material.button.MaterialButton-->
<!--                            style="?attr/borderlessButtonStyle"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/edit" />-->
<!--                    </LinearLayout>-->

<!--                </LinearLayout>-->

<!--            </com.google.android.material.card.MaterialCardView>-->

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>